Hide edite credential for other user

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -83,7 +83,7 @@
                 <li>
                     <div *ngIf="employmentExists && isOwner">
                         <i class="fa fa-suitcase"></i> <span innerHTML="{{employmentHtml}}"></span> 
-                        <a (click)='openEmploymentDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
+                        <a *ngIf="isOwner" (click)='openEmploymentDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
                     </div>
                     <a *ngIf="!employmentExists && isOwner" (click)="openEmploymentDialogAnchor()" class="edit">
                         Add Employment
@@ -92,7 +92,7 @@
                 <li>
                     <div *ngIf="educationExists">
                         <i class="fa fa-university"></i> <span innerHTML="{{educationHtml}}"></span>
-                        <a (click)='openEducationDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
+                        <a *ngIf="isOwner" (click)='openEducationDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
                     </div>
                     <a *ngIf="!educationExists && isOwner" (click)="openEducationDialogAnchor()" class="edit">
                         Add Education
@@ -101,7 +101,7 @@
                 <li>
                     <div *ngIf="placeExists">
                         <i class="fa fa-home"></i> <span innerHTML="{{placeHtml}}"></span>
-                        <a (click)='openPlaceDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
+                        <a *ngIf="isOwner" (click)='openPlaceDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
                     </div>
                     <a *ngIf="!placeExists && isOwner" (click)="openPlaceDialogAnchor()" class="edit">
                         Add Place
@@ -110,7 +110,7 @@
                 <li>
                     <div *ngIf="otherExperienceExists">
                         <i class="fa fa-cog"></i> <span innerHTML="{{othersHtml}}"></span>
-                        <a (click)='openOtherexperienceDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
+                        <a *ngIf="isOwner" (click)='openOtherexperienceDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
                     </div>
                     <a *ngIf="!otherExperienceExists && isOwner" (click)="openOtherexperienceDialogAnchor()" class="edit">
                         Add Others
