--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/VirtualStore/Index.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/VirtualStore/Index.cshtml
@@ -98,7 +98,7 @@
         </div>
         <div class="btn-group-lg btn-container">
             <input type="submit" value="Add" class="btn btn-primary btn-lg">
-            <button class="btn btn-primary btn-lg">Upload</button>
+            @*<button class="btn btn-primary btn-lg">Upload</button>*@
         </div>
     </div>
 }
