--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-education.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-education.component.html
@@ -83,7 +83,7 @@
                     <div class="form-group">
                         <label class="control-label col-sm-4" for="pwd">Graduation Year</label>
                         <div class="col-sm-8">
-                            <input type="number" class="form-control" id="graduaionYear" placeholder="eg.2000" [(ngModel)]="education.graduaionYear" [ngModelOptions]="{standalone: true}" />
+                            <input type="number" class="form-control" id="graduaionYear" placeholder="eg.2000" [(ngModel)]="education.graduationYear" [ngModelOptions]="{standalone: true}" />
                         </div>
                     </div>
 
