--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -104,7 +104,7 @@
             background-color: darkgray;
             color: white;
             right: 0;
-           
+            bottom: 0;
             left: 0;
             position: absolute;
         }
@@ -147,7 +147,6 @@
             padding: 10px;
             background-color: #ededed;
             margin-top: 77px;
-            
         }
 
         .left-border {
