--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
@@ -53,7 +53,7 @@
     </div>
     <div class="modal-footer">
         <div style="float:left;color:#737373;line-height: 34px;">
-            <button *ngIf="isDraft" type="button" (click)="submitAnswer(question.id)" data-dismiss="modal" class="btn btn-primary">Submit</button>
+            <button *ngIf="!isDraft" type="button" (click)="submitAnswer(question.id)" data-dismiss="modal" class="btn btn-primary">Submit</button>
             <button *ngIf="!isDraft" type="button" (click)="submitAnswerAsDraft(question.id)" data-dismiss="modal" class="btn btn-primary">Save As Draft</button>
             <button *ngIf="isDraft" type="button" (click)="submitAnswer(question.id)" data-dismiss="modal" class="btn btn-primary">Publish Answer</button>
         </div>
