akash:Delet of credential added ssuccessfully

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-education.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-education.component.html
@@ -89,7 +89,7 @@
 
 
                     <div class="profile-modal-button-container">
-                        <a (click)="DeleteCredentialTitle()">Delete</a>
+                        <a (click)="DeleteEducation()">Delete</a>
                         <a (click)="onClickedExit()">Cancel</a>
                         <button type="submit" class="btn btn-success" [disabled]="!educationForm.form.valid">Save</button>
                     </div>
