--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-otherexperience.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-otherexperience.component.html
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="profile-modal-button-container">
-                        <a (click)="DeleteCredentialTitle()">Delete</a>
+                        <a (click)="DeleteOtherExperience()">Delete</a>
                         <a (click)="onClickedExit()">Cancel</a>
                         <button type="submit" class="btn btn-success" [disabled]="!otherExperienceForm.form.valid">Save</button>
                     </div>
