--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-employment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-employment.component.html
@@ -91,7 +91,7 @@
 
 
                     <div class="profile-modal-button-container">
-                        <a (click)="DeleteCredentialTitle()">Delete</a>
+                        <a (click)="DeleteEmployment()">Delete</a>
                         <a (click)="onClickedExit()">Cancel</a>
                         <button type="submit" class="btn btn-success" [disabled]="!employmentForm.form.valid">Save</button>
                     </div>
