--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-place.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-place.component.html
@@ -82,7 +82,7 @@
                     </div>
 
                     <div class="profile-modal-button-container">
-                        <a (click)="DeleteCredentialTitle()">Delete</a>
+                        <a (click)="DeletePlace()">Delete</a>
                         <a (click)="onClickedExit()">Cancel</a>
                         <button type="submit" class="btn btn-success" [disabled]="!placeForm.form.valid">Save</button>
                     </div>
