akash:Bug fixxed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/post-comment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/post-comment.component.html
@@ -11,7 +11,7 @@
             <div *ngFor="let comment of blogPost.comments" class="clearfix">
                 <hr />
                 <div *ngIf="comment">
-                    <img class="user-image comment-img" src="../../../../profile/{{comment?.user?.imageUrl}}" />
+                    <img class="user-image comment-img" src="{{comment?.user?.imageUrl}}" />
                     <div class="header-info">{{comment?.user?.name}}</div>
                     <p class="answer-text">{{comment.commentText}}</p>
                 </div>
