--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/draft-answer/draft-answer.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/draft-answer/draft-answer.component.html
@@ -1,5 +1,26 @@
 ﻿<div class="tab" *ngFor="let question of questions">
-    <answer-submit [question]="question" [isFullScreen]="false" [isDetail]="false" [isDraft]="true"></answer-submit>
+    <!--<answer-submit [question]="question" [isFullScreen]="false" [isDetail]="false" [isDraft]="true"></answer-submit>-->
+    <form #answerVM="ngForm" class="form-horizontal " role="form">
+        <div class="modal-header">
+            <h1>{{question.title}}</h1>
+            <div class="row">
+                <div class="img-container" *ngIf="!isAnonymous">
+                    <!--<img class="user-image" src="{{_logObj.user.imageUrl}}" />-->
+                </div>
+                <div class="img-container" *ngIf="isAnonymous">
+                    <img class="user-image " src="../../../../profile/Anonymous.png" />
+                </div>
+            </div>
+            <!--<div class="header-info">{{_logObj.user?.name}}  {{_logObj.user?.occupassion}} </div>-->
+        </div>
+        <div class="modal-body">
+            <quill-editor [(ngModel)]="answerText" [ngModelOptions]="{standalone: true}"
+                          [modules]="{  toolbar: [['bold', 'italic', 'underline'], ['link', 'image']] }"
+                          required name="answerField" #answerField="ngModel"></quill-editor>
+        </div>
+        <div style="text-align:left;">
+            <button type="button" (click)="publishAnswer(question.id)" data-dismiss="modal" class="btn btn-primary">Publish Answer</button>
+           
+        </div>
+    </form>
 </div>
-<!--<h1>Drafted Answer</h1>
-<answer-submit [question]="question" [isFullScreen]="false" [isDetail]="false"></answer-submit>-->
