--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-employment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-employment.component.html
@@ -67,16 +67,16 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-4" for="pwd">StartDate:</label>
+                        <label class="control-label col-sm-4" for="pwd">Start Year:</label>
                         <div class="col-sm-8">
-                            <input type="number"  class="form-control" [(ngModel)]="employment.startDate" [ngModelOptions]="{standalone: true}" placeholder="Start year eg.2000"/>
+                            <input type="number"  class="form-control" [(ngModel)]="employment.startDate" [ngModelOptions]="{standalone: true}" placeholder="eg.2000" min="1900" max="3000"/>
                            
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-4" for="pwd">EndDate:</label>
+                        <label class="control-label col-sm-4" for="pwd">End Year:</label>
                         <div class="col-sm-8">
-                            <input type="number" class="form-control" [(ngModel)]="employment.endDate" [ngModelOptions]="{standalone: true}" placeholder="End year eg.2017" />
+                            <input type="number" class="form-control" [(ngModel)]="employment.endDate" [ngModelOptions]="{standalone: true}" placeholder="eg.2017" min="1900" max="3000" />
 
                           
                         </div>
