--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-otherexperience.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-otherexperience.component.html
@@ -63,7 +63,7 @@
                     <div class="form-group">
                         <label class="control-label col-sm-4" for="email">Description*:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="Description" placeholder="Enter Description" [(ngModel)]="otherExperience.Description" required name="Description"
+                            <input type="text" class="form-control" id="Description" placeholder="Enter Description" [(ngModel)]="otherExperience.description" required name="Description"
                                    #Description="ngModel">
                             <div [hidden]="Description.valid || Description.pristine"
                                  class="alert alert-danger">
