--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-place.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-place.component.html
@@ -64,13 +64,13 @@
                     <div class="form-group">
                         <label class="control-label col-sm-4" for="pwd">StartYear:</label>
                         <div class="col-sm-8">
-                            <input type="number" class="form-control" id="graduaionYear" placeholder="startYear eg.2000" [(ngModel)]="place.startYear" [ngModelOptions]="{standalone: true}">
+                            <input type="number" class="form-control" id="graduaionYear" placeholder="eg.2000" [(ngModel)]="place.startYear" [ngModelOptions]="{standalone: true}" min="1900" max="3000">
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-4" for="pwd">EndYear:</label>
                         <div class="col-sm-8">
-                            <input type="number" class="form-control" id="graduaionYear" placeholder="emdYear eg.2000" [(ngModel)]="place.endYear" [ngModelOptions]="{standalone: true}">
+                            <input type="number" class="form-control" id="graduaionYear" placeholder="eg.2000" [(ngModel)]="place.endYear" [ngModelOptions]="{standalone: true}" min="1900" max="3000">
                         </div>
                     </div>
                     <div class="form-group">
