--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/comment/comment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/comment/comment.component.html
@@ -3,7 +3,7 @@
     <div class="collapse comment-panel" id="questionComment{{commentId}}">
         <form #commentForm="ngForm" class="form-horizontal " role="form">
             <div class="comment-input">
-                <img class="user-image" src="../../../../profile/{{_logObj.user.imageUrl?_logObj.user.imageUrl:'avatar.png'}}" />
+                <img class="user-image" src="{{_logObj.user.imageUrl?_logObj.user.imageUrl:'avatar.png'}}" />
                 <input class="form-control" id="comment" [(ngModel)]="commentText" [ngModelOptions]="{standalone: true}" />
                 <button type="button" class="btn btn-primary" (click)="submitComment(questionId,answerId)">Comment</button>
             </div>
@@ -11,7 +11,7 @@
         <div class="card card-block">
             <div *ngFor="let comment of comments" class="clearfix">
                 <div *ngIf="comment">
-                    <img class="user-image comment-img" src="../../../../profile/{{comment?.userViewModel?.imageUrl}}" />
+                    <img class="user-image comment-img" src="{{comment?.userViewModel?.imageUrl}}" />
                     <div class="header-info">{{comment?.userViewModel?.name}}</div>
                     <p class="answer-text">{{comment.commentText}}</p>
                 </div>
