--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-category/profile-category.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-category/profile-category.component.html
@@ -25,7 +25,7 @@
     <h3>Sabe sobre</h3>
     <ul class="profile-rightmenu" *ngFor="let categoryWiseAnswer of categoryWiseAnswers">
         <li>
-            <img class="profile-cat-img" src="{{categoryWiseAnswer?.imageUrl}}" /> 
+            <img class="profile-cat-img" src="{{categoryWiseAnswer?.imageUrl}}"  [routerLink]="['/question/home',categoryWiseAnswer?.categoryId]"/> 
             <h3>
                 <a [routerLink]="['/question/home',categoryWiseAnswer?.categoryId]"> {{categoryWiseAnswer?.categoryName}}</a>
             </h3>
