--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/apbanner.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/apbanner.component.html
@@ -4,7 +4,7 @@
     </ol>
     <ul class="slides">
         <li class="slide-item" *ngFor="let image of images" [style.left]="moveValue">
-            <h2>{{image.title}}</h2>
+            <!--<h2>{{image.title}}</h2>-->
             <img src="{{image.url}}" alt="">
         </li>
     </ul>
