--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -18,17 +18,18 @@
     .top-spacing {
         margin-top: 20px;
     }
-    .credential-panel
-    {
-        list-style:none;
-    }
-    .credential-panel li{
-        margin-bottom:10px;
-    }
-    .row-overflow{
-        overflow:visible;
+
+    .credential-panel {
+        list-style: none;
     }
 
+        .credential-panel li {
+            margin-bottom: 10px;
+        }
+
+    .row-overflow {
+        overflow: visible;
+    }
 </style>
 
 
@@ -70,20 +71,23 @@
                     <router-outlet></router-outlet>
                 </div>
                 <!-- For Hover pop up get some space to show -->
-                <div style="height:200px;position:relative;"></div> 
+                <div style="height:200px;position:relative;"></div>
             </div>
         </div>
     </div>
     <div class="col-md-3 top-spacing">
         <div>
             <h3>
-                Credentials               
+                Credentials
             </h3>
 
             <ul class="credential-panel">
                 <li>
                     <div *ngIf="employmentExists && isOwner">
-                        <i class="fa fa-suitcase"></i> <span title="Employment" innerHTML="{{employmentHtml}}"></span> 
+                        <div class="mytooltip"><i class="fa fa-suitcase"></i><span class="mytooltiptext">Employment</span></div>
+
+
+                        <span title="Employment" innerHTML="{{employmentHtml}}"></span>
                         <a *ngIf="isOwner" (click)='openEmploymentDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
                     </div>
                     <a *ngIf="!employmentExists && isOwner" (click)="openEmploymentDialogAnchor()" class="edit">
@@ -92,7 +96,9 @@
                 </li>
                 <li>
                     <div *ngIf="educationExists">
-                        <i class="fa fa-university"></i> <span title="Education" innerHTML="{{educationHtml}}"></span>
+                        <div class="mytooltip"><i class="fa fa-university"></i><span class="mytooltiptext">Education</span></div>
+
+                        <span title="Education" innerHTML="{{educationHtml}}"></span>
                         <a *ngIf="isOwner" (click)='openEducationDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
                     </div>
                     <a *ngIf="!educationExists && isOwner" (click)="openEducationDialogAnchor()" class="edit">
@@ -101,7 +107,9 @@
                 </li>
                 <li>
                     <div *ngIf="placeExists">
-                        <i class="fa fa-home"></i> <span title="Place" innerHTML="{{placeHtml}}"></span>
+                        <div class="mytooltip"><i class="fa fa-home"></i><span class="mytooltiptext">Place</span></div>
+
+                        <span title="Place" innerHTML="{{placeHtml}}"></span>
                         <a *ngIf="isOwner" (click)='openPlaceDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
                     </div>
                     <a *ngIf="!placeExists && isOwner" (click)="openPlaceDialogAnchor()" class="edit">
@@ -110,7 +118,9 @@
                 </li>
                 <li>
                     <div *ngIf="otherExperienceExists">
-                        <i class="fa fa-cog"></i> <span title="Others" innerHTML="{{othersHtml}}"></span>
+                        <div class="mytooltip"><i class="fa fa-cog"></i><span class="mytooltiptext">Other</span></div>
+
+                        <span title="Others" innerHTML="{{othersHtml}}"></span>
                         <a *ngIf="isOwner" (click)='openOtherexperienceDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
                     </div>
                     <a *ngIf="!otherExperienceExists && isOwner" (click)="openOtherexperienceDialogAnchor()" class="edit">
