--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Login.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Login.cshtml
@@ -95,7 +95,7 @@
                 </h2>
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-md-10">
-                        <input asp-for="Email" placeholder="EMAIL ADDRESS" class="form-control" />
+                        <input asp-for="Email" placeholder="EMAIL ADDRESS" class="form-control" id="email"/>
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                 </div>
@@ -119,7 +119,11 @@
     <div class="col-md-3">
     </div>
 </div>
-
+<script>
+    window.setTimeout(function () {
+        document.getElementById('email').focus();
+    }, 0);
+</script>
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
