--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-education.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-education.component.html
@@ -1,6 +1,6 @@
 ﻿<style>
     .credential-dialog {
-        margin: 10% auto;
+        margin: 15% auto;
         max-width: 45%;
     }
 
@@ -37,8 +37,6 @@
     .modal-header h3 {
         font-weight: bold;
     }
-
-   
 </style>
 
 <div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
@@ -46,7 +44,8 @@
         <div class="exit-button" (click)="onClickedExit()">x</div>
         <div class="modal-container" style="border:1px solid;">
             <div class="modal-header">
-                <h3>Add Education</h3>
+
+                <h3>Education</h3>
             </div>
             <div class="profile-modal-body">
                 <form class="form-horizontal" (ngSubmit)="saveEducation()" #educationForm="ngForm">
@@ -83,7 +82,7 @@
                     <div class="form-group">
                         <label class="control-label col-sm-4" for="pwd">Graduation Year</label>
                         <div class="col-sm-8">
-                            <input type="number" class="form-control" id="graduaionYear" placeholder="eg.2000" [(ngModel)]="education.graduationYear" [ngModelOptions]="{standalone: true}" min="1900" max="3000"/>
+                            <input type="number" class="form-control" id="graduaionYear" placeholder="eg.2000" [(ngModel)]="education.graduationYear" [ngModelOptions]="{standalone: true}" min="1900" max="3000" />
                         </div>
                     </div>
 
