--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -211,8 +211,9 @@
 
 .checkbox {
     height: 18px;
-    width: 18px!important;
+    width: 18px !important;
 }
+
 .mytooltip {
     position: relative;
     display: inline-block;
@@ -227,7 +228,6 @@
     text-align: center;
     border-radius: 6px;
     padding: 5px 0;
-    
     /* Position the tooltip */
     position: absolute;
     z-index: 1;
@@ -243,3 +243,13 @@
   <span class="mytooltiptext">Tooltip text</span>
 </div>
 */
+.noshadow {
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+}
+.noshadow:focus {
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+}
