--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-education.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-education.component.html
@@ -1,6 +1,6 @@
 ﻿<style>
     .credential-dialog {
-        margin: 15% auto;
+        margin: 10% auto;
         max-width: 45%;
     }
 
@@ -37,6 +37,9 @@
     .modal-header h3 {
         font-weight: bold;
     }
+    .col-sm-8 {
+        padding-left: 0;
+    }
 </style>
 
 <div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
@@ -45,7 +48,7 @@
         <div class="modal-container" style="border:1px solid;">
             <div class="modal-header">
 
-                <h3>Education</h3>
+                <h3>Education Information</h3>
             </div>
             <div class="profile-modal-body">
                 <form class="form-horizontal" (ngSubmit)="saveEducation()" #educationForm="ngForm">
