--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-place.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-place.component.html
@@ -1,6 +1,6 @@
 ﻿<style>
       .credential-dialog {
-        margin: 15% auto;
+        margin: 10% auto;
         max-width: 45%;
     }
 
@@ -37,6 +37,9 @@
     .modal-header h3 {
         font-weight: bold;
     }
+     .col-sm-8 {
+        padding-left: 0;
+    }
 </style>
 
 <div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
@@ -44,13 +47,13 @@
         <div class="exit-button" (click)="onClickedExit()">x</div>
         <div class="modal-container" style="border:1px solid;">
             <div class="modal-header">
-                <h3>Add Place</h3>
+                <h3>Place Information</h3>
 
             </div>
             <div class="profile-modal-body">
                 <form class="form-horizontal" (ngSubmit)="savePlace()" #placeForm="ngForm">
                     <div class="form-group">
-                        <label class="control-label col-sm-4" for="email">Location Name:</label>
+                        <label class="control-label col-sm-4" for="email">Location Name*:</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="LocationName" placeholder="Enter LocationName" [(ngModel)]="place.locationName" required name="LocationName"
                                    #LocationName="ngModel">
@@ -76,7 +79,7 @@
                     <div class="form-group">
                         <label class="control-label col-sm-4">Currenty Living:</label>
                         <div class="col-sm-8">
-                            <input type="checkbox" class="form-control checkbox" [(ngModel)]="place.isCurrentyLiving" [ngModelOptions]="{standalone: true}" />
+                            <input type="checkbox" class="form-control checkbox noshadow" [(ngModel)]="place.isCurrentyLiving" [ngModelOptions]="{standalone: true}" />
                         </div>
 
                     </div>
