--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
@@ -93,7 +93,7 @@
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-md-10">
-                        <input asp-for="Email" placeholder="Email" class="form-control" />
+                        <input asp-for="Email" placeholder="Email" class="form-control" id="email"/>
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                 </div>
@@ -124,6 +124,11 @@
     <div class="col-md-3">
     </div>
 </div>
+<script>
+    window.setTimeout(function () {
+        document.getElementById('email').focus();
+    }, 0);
+</script>
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
