category page header changed for followers

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
@@ -46,6 +46,7 @@
 
 <body>
     <style>
+        textarea { resize: vertical; } 
         .body-minHeight {
             min-height: 100vh;
         }
