akash:Question total fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-category/profile-category.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-category/profile-category.component.html
@@ -1,31 +1,17 @@
 ﻿<style>
-    /*.statistic-panel {
-        min-height: 20vh;
-        padding-right: 30%;
-    }
-
-    .profile-rightmenu {
-        color: #9d9d9b;
-        width: 100%;
-        margin: 0 auto;
-        border-top: 1px solid #eeeeee;
-        padding-top: 10px;
-        list-style: none;
-        padding-left: 20px;
-    }*/
-
     .profile-cat-img {
         float: left;
         height: 50px;
         width: 50px;
         border-radius: 4px;
+        padding-right: 4px;
     }
 </style>
 <div class="statistic-panel">
     <h3>Sabe sobre</h3>
     <ul class="profile-rightmenu" *ngFor="let categoryWiseAnswer of categoryWiseAnswers">
         <li>
-            <img class="profile-cat-img" src="{{categoryWiseAnswer?.imageUrl}}"  [routerLink]="['/question/home',categoryWiseAnswer?.categoryId]"/> 
+            <img class="profile-cat-img" src="{{categoryWiseAnswer?.imageUrl}}" [routerLink]="['/question/home',categoryWiseAnswer?.categoryId]" />
             <h3>
                 <a [routerLink]="['/question/home',categoryWiseAnswer?.categoryId]"> {{categoryWiseAnswer?.categoryName}}</a>
             </h3>
